# cora

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
cora/: admin.py  apps.py  asgi.py  authentication.py  decorators.py  models.py  permissions.py  pgmq.py  settings.py  tasks.py  test_htmx_partials.py  tests.py  urls.py  views.py  wsgi.py
cora/migrations/: 0001_initial.py  0002_initial.py  0002_setup_pgmq_trigger.py  0003_colaapplication_prior_status_and_more.py  0003_labelimage_ocr_status_labelimage_ocr_text_and_more.py  0004_add_review_lock_fields.py  0004_add_uuid_fields.py  0005_add_api_token.py  0005_migrate_fk_to_uuid.py  0006_extend_apitoken_prefix.py  0006_rename_uuid_to_pk.py  0007_add_custom_permissions.py  0007_remove_colaapplication_uuid_id_and_more.py  0008_alter_apitoken_name_alter_apitoken_prefix_and_more.py  0008_remove_colaapplication_uuid_id_and_more.py  0009_remove_colaapplication_uuid_id_and_more.py  0010_remove_colaapplication_uuid_id_and_more.py  0011_remove_colaapplication_uuid_id_and_more.py
cora/templates/: base.html
cora/tests/: test_auth.py  test_htmx_partials.py
cora/utils/: __init__.py  ids.py  test_ids.py
docs/: 0_GAPS.md  REVIEW.md  ROADMAP  UUIDv7_migration_plan.md  cola_database_reverse_engineered.md  decisions.md  discovery.md  naming.md  requirements.md  workflow.md
docs/designs/: 00_GAPS.md  01-Workflow.md  01-cola-import.md  (+11 more)
scripts/: demo_ocr.py  demo_ocr_async.py  run_migrations.sh  run_ocr_worker.py  test_pg.py
test-data/: README.md  items.json
(+35 files in other folders)
