[project]
name = "cora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-q>=1.3.9",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "jsonschema>=4.26.0",
    "pgsql>=2.2",
    "pillow>=12.2.0",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "setuptools>=82.0.1",
    "uuid6>=1.10",
]
