[project]
name = "cora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-q>=1.3.9",
    "dotenv>=0.9.9",
    "factory-boy>=3.3.3",
    "gunicorn>=26.0.0",
    "jsonschema>=4.26.0",
    "pgsql>=2.2",
    "pillow>=12.2.0",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-django>=4.9.0",
    "setuptools>=82.0.1",
    "uuid6>=1.10",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "cora.settings"
python_files = ["test_*.py"]
python_classes = ["Test*", "*Tests"]
addopts = "-v"
